fix and create security docs for swagger
